[package]
name = "quicksilver_pathfinding"
version = "0.1.0"
authors = ["Winsalot <peteraitis.vilius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "2.0.4"
quicksilver = "0.4.0-alpha0.5"


[features]
stdweb = ["quicksilver/stdweb"]